Add ComputeResources and Image to Command and JobEnvironment DTOs
- Wire them through converters, resolver, agent launchers, entities
- Deal with trickle of data type changes and other side effects as development moved along and earlier assumptions were re-done